# isotope_workcell

./: compose.yaml
applications/example_app/: pyproject.toml
applications/example_app/src/: example_app.py
applications/example_app/workflows/: test_workflow.yaml  ur_joint_disconnect_workflow.yaml
docker/: wei.compose.yaml
workcell_defs/: isotope_workcell.yaml
