[isotope_workcell]
name = "example_app"
version = "1.1.0"
description = "A sample WEI application for the isotope workcell to test mir, UR, and camera communications."
authors = [{name = "Aileen Cleary", email="acleary@anl.gov"}]
dependencies = [
    "ad_sdl.wei",
    "requests"
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/AD-SDL/isotope_workcell"
